[UPDATE] nueva funcion del boton inicio

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="img/news.png" alt="logo" class="logo">
         <nav class="menu">
-            <div>Inicio</div>
+            <div id="inicio">Inicio</div>
             <div id="menu">
                 Noticias
                 <ul id="lista">
@@ -24,29 +24,8 @@
     </header>
     <h1>Noticias del día</h1>
     <main class="contenedor">
-        <!--<div class="item"> 
-            <div class="encabezado">
-                <h2>titulo</h2>
-                <img src="img/news.png" alt="noticia internacional" class="internacional">
-            </div>
-            <h3>fecha</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi nam similique labore est consectetur qui totam ipsa architecto, temporibus eum libero minima tempora doloribus praesentium? Praesentium incidunt enim quod eligendi?
-            </p>
-            <img src="img/news.png" class="imagen">
-          </div>
-
-          <div class="item"> 
-            <div class="encabezado">
-                <h2>titulo</h2>
-                <img src="img/news.png" alt="internacionales" class="internacional">
-            </div>
-            <h3>fecha</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi nam similique labore est consectetur qui totam ipsa architecto, temporibus eum libero minima tempora doloribus praesentium? Praesentium incidunt enim quod eligendi?
-            </p>
-            <img src="img/news.png" class="imagen">
-          </div>-->
+        
+        <!--Aqui iran las noticias-->
          
     </main>
     <footer>
